--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 9.5a 10.5 10.5 0 0 1 10.5 10.5a 9.5 9.5 0 0 0 9.5 9.5v1a-10.5-10.5 0 0 1-10.5-10.5a-9.5-9.5 0 0 0-9.5-9.5z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 9.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5zM20 49.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-	background-attachment: fixed;
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='35' height='35' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+  	background-attachment: fixed;
 	background-size: cover;
-	animation: switch 6s infinite;
+	animation: switch 10s infinite;
 }
 
 p {
@@ -13,21 +13,20 @@ p {
 }
 
 .iconAdded{
-	animation: waterFlowers 6s infinite;
+	animation: openDoor 10s infinite;
 }
 
-@keyframes waterFlowers {
+@keyframes openDoor {
 	0%, 100%{
 		transform: rotate(0deg);
-		font-size:50px;
-		margin-right: -750px;
+		font-size:500px;
 	}
-	25%{
+	50%{
 		transform: rotate(360deg);
-		font-size:75px;
-		margin-right: 750px;
+		font-size:20px;
+		color: transparent;
 	}
-	50%
+	/*50%
 	{
 		transform: rotate(0deg);
 		font-size:100px;
@@ -39,21 +38,12 @@ p {
 		font-size:75px;
 		margin-right: -750px;
 		margin-top: 400px;
-	}
+	}*/
 }
 
 center {
 	font-family: 'Comforter', cursive;
 	font-size: 150px;
-}
-
-@keyframes changeColor{
-	0%, 100%{
-		color: black;
-	}
-	50%{
-		color: gray;
-	}
 }
 
 .headtext{
@@ -72,16 +62,16 @@ center {
 
 @keyframes switch {
 	0%, 100%{
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 9.5a 10.5 10.5 0 0 1 10.5 10.5a 9.5 9.5 0 0 0 9.5 9.5v1a-10.5-10.5 0 0 1-10.5-10.5a-9.5-9.5 0 0 0-9.5-9.5z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 9.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5zM20 49.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-	background-attachment: fixed;
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='35' height='35' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+  	background-attachment: fixed;
 	background-size: cover;
 		}
-	25%{
-		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 9.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5zM20 49.5a 9.5-9.5 0 0 0 9.5-9.5a 10.5-10.5 0 0 1 10.5-10.5v1a-9.5 9.5 0 0 0-9.5 9.5a-10.5 10.5 0 0 1-10.5 10.5z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	50%{
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='50.81' height='88' viewBox='0 0 34.64101615137755 60' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 224, 94,1)'/%3E%3Cpath d='M51.96 30L51.96 50L34.64 60L34.64 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M17.32 30L17.32 50L0 60L0 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 0L34.64 20L17.32 30L17.32 10z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 60L34.64 80L17.32 90L17.32 70z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 60L17.32 50L17.32 30L34.64 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M0 60L-17.32 50L-17.32 30L0 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 30L0 20L0 0L17.32 10z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 90L0 80L0 60L17.32 70z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M25.11 45.5L25.11 34.5L34.64 29L34.64 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M-9.53 45.5L-9.53 34.5L0 29L0 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M7.79 15.5L7.79 4.5L17.32-1L17.32 10z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M7.79 75.5L7.79 64.5L17.32 59L17.32 70z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 29L44.17 34.5L44.17 45.5L34.64 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M0 29L9.53 34.5L9.53 45.5L0 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32-1L26.85 4.5L26.85 15.5L17.32 10z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 59L26.85 64.5L26.85 75.5L17.32 70z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M44.17 45.5L34.64 51L25.11 45.5L34.64 40z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M9.53 45.5L0 51L-9.53 45.5L0 40z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 15.5L17.32 21L7.79 15.5L17.32 10z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 75.5L17.32 81L7.79 75.5L17.32 70z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 51L25.11 45.5L25.11 34.5L34.64 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M0 51L-9.53 45.5L-9.53 34.5L0 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 21L7.79 15.5L7.79 4.5L17.32 10z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 81L7.79 75.5L7.79 64.5L17.32 70z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M44.17 34.5L44.17 45.5L34.64 51L34.64 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M9.53 34.5L9.53 45.5L0 51L0 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 4.5L26.85 15.5L17.32 21L17.32 10z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 64.5L26.85 75.5L17.32 81L17.32 70z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M25.11 34.5L34.64 29L44.17 34.5L34.64 40z' stroke-linejoin='miter' background='true' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M-9.53 34.5L0 29L9.53 34.5L0 40z' stroke-linejoin='miter' background='true' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M7.79 4.5L17.32-1L26.85 4.5L17.32 10z' stroke-linejoin='miter' background='true' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M7.79 64.5L17.32 59L26.85 64.5L17.32 70z' stroke-linejoin='miter' background='true' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M25.11 45.5L25.11 34.5L34.64 29L34.64 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M-9.53 45.5L-9.53 34.5L0 29L0 40z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M7.79 15.5L7.79 4.5L17.32-1L17.32 10z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M7.79 75.5L7.79 64.5L17.32 59L17.32 70z' stroke-linejoin='miter' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M34.64 29L44.17 34.5L44.17 45.5L34.64 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M0 29L9.53 34.5L9.53 45.5L0 40z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32-1L26.85 4.5L26.85 15.5L17.32 10z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M17.32 59L26.85 64.5L26.85 75.5L17.32 70z' stroke-linejoin='miter' fill='rgba(221, 107, 32,1)'/%3E%3Cpath d='M44.17 45.5L34.64 51L25.11 45.5L34.64 40z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M9.53 45.5L0 51L-9.53 45.5L0 40z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 15.5L17.32 21L7.79 15.5L17.32 10z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M26.85 75.5L17.32 81L7.79 75.5L17.32 70z' stroke-linejoin='miter' background='true' fill='rgba(102, 126, 234,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
-	50%{
+	/*50%{
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   	background-attachment: fixed;
 	background-size: cover;
@@ -90,7 +80,7 @@ center {
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='35' height='35' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   	background-attachment: fixed;
 	background-size: cover;
-  	}
+  	}*/
 }
 
 /*@keyframes backgroundChange {
