--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='192' height='192' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 20L20 0L0 0zM20 40L40 20L40 40z' fill='rgba(233, 216, 253,1)'/%3E%3Cpath d='M0 20L20 40L20 20L0 20M20 20L20 0L40 20L20 20z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-	background-attachment: fixed;
-	background-size: cover;
+	background-color: #292787;
+	animation: switch 10s infinite;
 }
 
 p {
@@ -11,13 +10,8 @@ p {
 	color: white;
 }
 
-#rectangle {
-  width: 200px;
-  height: 100px;
-  background: red;
-}
-
 .iconAdded{
+
 }
 
 @keyframes slideAway {
@@ -47,33 +41,16 @@ p {
 }
 
 center {
-	font-family: 'Comforter', cursive;
 	font-size: 150px;
 }
 
-.headtext{
-    font-size: 600%;
-}
-
-#text2{
-    animation-delay: 3s;
-}
-
-@keyframes head {
-    0% {font-size:600%; opacity:1;}
-    50% {font-size:0; opacity:0;}
-    100% {font-size:600%;opacity:1;}
-}
 
 @keyframes switch {
 	0%, 100%{
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='129' height='129' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(184, 50, 128,1)'/%3E%3Cpath d='M20 20v20h-20v-20zM20 10v20l10-10h-20z' fill='rgba(112, 36, 89,1)'/%3E%3Cpath d='M0 10v10l20-20h-20zM30 40h-10l20-20v20zM20 20h11v-11h-11z' fill='rgba(229, 62, 62,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ")background-attachment: fixed;
-	background-size: cover;
+	background-color:#292787;
 		}
 	50%{
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='300' height='300' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M-0.5 20v20h1v-20zM1.5 20v20h1v-20zM3.5 20v20h1v-20zM5.5 20v20h1v-20zM7.5 20v20h1v-20zM9.5 20v20h1v-20zM11.5 20v20h1v-20zM13.5 20v20h1v-20zM15.5 20v20h1v-20zM17.5 20v20h1v-20zM19.5 20v20h1v-20zM21.5 20v20h1v-20zM23.5 20v20h1v-20zM25.5 20v20h1v-20zM27.5 20v20h1v-20zM29.5 20v20h1v-20zM31.5 20v20h1v-20zM33.5 20v20h1v-20zM35.5 20v20h1v-20zM37.5 20v20h1v-20zM39.5 20v20h1v-20z' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M-10 20 h60 v20 h-60z' fill='rgba(160, 174, 192,1)'/%3E%3Cpath d='M0.5 0v40h1v-40zM2.5 0v40h1v-40zM4.5 0v40h1v-40zM6.5 0v40h1v-40zM8.5 0v40h1v-40zM10.5 0v40h1v-40zM12.5 0v40h1v-40zM14.5 0v40h1v-40zM16.5 0v40h1v-40zM18.5 0v40h1v-40zM20.5 0v40h1v-40zM22.5 0v40h1v-40zM24.5 0v40h1v-40zM26.5 0v40h1v-40zM28.5 0v40h1v-40zM30.5 0v40h1v-40zM32.5 0v40h1v-40zM34.5 0v40h1v-40zM36.5 0v40h1v-40zM38.5 0v40h1v-40z' fill='rgba(102, 126, 234,1)'/%3E%3Cpath d='M-10 0h60v20h-60z' fill='rgba(160, 174, 192,1)'/%3E%3Cpath d='M-0.5 0v20h1v-20zM1.5 0v20h1v-20zM3.5 0v20h1v-20zM5.5 0v20h1v-20zM7.5 0v20h1v-20zM9.5 0v20h1v-20zM11.5 0v20h1v-20zM13.5 0v20h1v-20zM15.5 0v20h1v-20zM17.5 0v20h1v-20zM19.5 0v20h1v-20zM21.5 0v20h1v-20zM23.5 0v20h1v-20zM25.5 0v20h1v-20zM27.5 0v20h1v-20zM29.5 0v20h1v-20zM31.5 0v20h1v-20zM33.5 0v20h1v-20zM35.5 0v20h1v-20zM37.5 0v20h1v-20zM39.5 0v20h1v-20z' fill='rgba(102, 126, 234,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-	background-attachment: fixed;
-	background-size: cover;
+	background-color:#42b6f5;
 	}
 	/*50%{
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
@@ -86,23 +63,4 @@ center {
 	background-size: cover;
   	}*/
 }
-
-/*@keyframes backgroundChange {
-  0%{
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(226, 232, 240,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(237, 242, 247,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-  }
-  25% {
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(237, 242, 247,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-  }
-  50%
-  {
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E "); 
-  }
-  75%{
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-  	}
-  100%{
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(186, 205, 218,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-  	}
-}*/
 
