--- a/css/main.css
+++ b/css/main.css
@@ -20,27 +20,33 @@ p {
 
 @keyframes Oval{
 	0%{
-	width: 200px;
-  height: 200px;
+	width: 100px;
+  height: 100px;
   background-color: red;
   border-radius: 50%
 
 	}
 	25%{
 	  width: 200px;
-      height: 100px;
+      height: 50px;
       background-color: orange;
       border-radius: 100px / 50px;
 	}
 	50%{
-	  width: 200px;
-      height: 100px;
+	  width: 50px;
+      height: 200px;
       background-color: yellow;
-      border-radius: 50px / 100px;
+      border-radius: 100px / 100px;
 	}
 	75%{
 		width: 100px;
       height: 200px;
+      background-color: orange;
+      border-radius: 50px / 100px;
+	}
+	100%{
+		width: 200px;
+      height: 100px;
       background-color: red;
       border-radius: 50px / 100px;
 	}
