--- a/css/main.css
+++ b/css/main.css
@@ -20,35 +20,19 @@ p {
 
 @keyframes Oval{
 	0%{
-	width: 100px;
-  height: 100px;
-  background-color: red;
-  border-radius: 50%
+		width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-bottom: 100px solid red;
 
 	}
-	25%{
-	  width: 200px;
-      height: 50px;
-      background-color: orange;
-      border-radius: 100px / 50px;
-	}
 	50%{
-	  width: 50px;
-      height: 200px;
-      background-color: yellow;
-      border-radius: 100px / 100px;
-	}
-	75%{
-		width: 100px;
-      height: 200px;
-      background-color: orange;
-      border-radius: 50px / 100px;
-	}
-	100%{
-		width: 200px;
-      height: 100px;
-      background-color: red;
-      border-radius: 50px / 100px;
+	  width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-bottom: 100px solid red;
 	}
 
 }
