--- a/css/main.css
+++ b/css/main.css
@@ -27,12 +27,19 @@ p {
       border-bottom: 100px solid red;
 
 	}
-	50%{
+	25%{
 	  width: 0;
       height: 0;
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
       border-top: 100px solid orange;
+	}
+	75%{
+	  width: 0;
+      height: 0;
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
+      border-bottom: 100px solid orange;
 	}
 
 }
