--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,12 @@ p {
 }
 
 .circle {
-	margin-top: 300px;
-  width: 200px;
-  height: 200px;
+	width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-bottom: 100px solid red;
   animation: Oval 5s infinite;
-  border-radius: 50%
 }
 
 @keyframes Oval{
@@ -35,8 +36,8 @@ p {
       border-top: 100px solid orange;
 	}
 	75%{
-	  width: 0;
-      height: 0;
+	  width: 5;
+      height: 5;
       border-left: 100px solid transparent;
       border-right: 100px solid transparent;
       border-bottom: 100px solid orange;
