--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,6 @@ p {
 
 @keyframes Oval{
 	0%, 100%{
-		width: 0;
-      height: 0;
       border-left: 50px solid transparent;
       border-right: 50px solid transparent;
       border-bottom: 100px solid red;
@@ -33,14 +31,14 @@ p {
       height: 0;
       border-left: 100px solid transparent;
       border-right: 100px solid transparent;
-      border-top: 100px solid orange;
+      border-bottom: 200px solid orange;
 	}
 	75%{
-	  width: 5;
-      height: 5;
+	  width: 0;
+      height: 0;
       border-left: 100px solid transparent;
       border-right: 100px solid transparent;
-      border-bottom: 100px solid orange;
+      border-bottom: 300px solid yellow;
 	}
 
 }
