--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,12 @@ p {
 }
 
 .circle {
-	width: 0;
-      height: 0;
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
       border-bottom: 100px solid red;
-  animation: Oval 5s infinite;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      height: 0;
+      width: 100px;
+      
 }
 
 @keyframes Oval{
