--- a/css/main.css
+++ b/css/main.css
@@ -10,35 +10,30 @@ p {
 	color: white;
 }
 
-.circle {
+.shape {
       border-bottom: 100px solid red;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
       height: 0;
       width: 100px;
-      
+      animation: Oval 5s infinite;
 }
 
 @keyframes Oval{
 	0%, 100%{
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
-      border-bottom: 100px solid red;
+      border-bottom: 50px solid green;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      height: 50px;
+      width: 100px;
 
 	}
-	25%{
+	50%{
 	  width: 0;
       height: 0;
       border-left: 100px solid transparent;
       border-right: 100px solid transparent;
       border-bottom: 200px solid orange;
-	}
-	75%{
-	  width: 0;
-      height: 0;
-      border-left: 100px solid transparent;
-      border-right: 100px solid transparent;
-      border-bottom: 300px solid yellow;
 	}
 
 }
