--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,10 @@ p {
       border-right: 25px solid transparent;
       height: 0;
       width: 100px;
-      animation: Oval 5s infinite;
+      animation: move 5s infinite;
 }
 
-@keyframes Oval{
+@keyframes move{
 	0%, 100%{
       border-bottom: 50px solid green;
       border-left: 25px solid transparent;
@@ -29,11 +29,11 @@ p {
 
 	}
 	50%{
-	  width: 0;
-      height: 0;
-      border-left: 100px solid transparent;
-      border-right: 100px solid transparent;
-      border-bottom: 200px solid orange;
+	  border-bottom: 500px solid purple;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      height: 200px;
+      width: 100px;
 	}
 
 }
