--- a/css/main.css
+++ b/css/main.css
@@ -21,18 +21,24 @@ p {
 
 @keyframes move{
 	0%, 100%{
-      border-bottom: 50px solid green;
+      border-bottom: 50px solid yellow;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
       height: 50px;
       width: 100px;
 
 	}
-	50%{
+	25%{
       width: 150px;
       height: 100px;
       transform: skew(20deg);
       background: red;
+	}
+	75%{
+      width: 100px;
+      height: 150px;
+      transform: skew(-20deg);
+      background: orange;
 	}
 
 }
