--- a/css/main.css
+++ b/css/main.css
@@ -96,36 +96,56 @@ center {
 
 @keyframes switch {
 	0%, 100%{
-	background-color:#292787;
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='192' height='192' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(197, 48, 48,1)'/%3E%3Cpath d='M0 40a 3-3 0 0 0 3-3a 17-17 0 0 1 17-17a 3-3 0 0 0 3-3a 17-17 0 0 1 17-17v14a-3 3 0 0 0-3 3a-17 17 0 0 1-17 17a-3 3 0 0 0-3 3a-17 17 0 0 1-17 17zM0 0a 3-3 0 0 0 3-3h14a-17 17 0 0 1-17 17z' fill='rgba(254, 178, 178,1)'/%3E%3Cpath d='M0 0a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 0 4.5 4.5a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 0 4.5 4.5a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 1 4.5 4.5v11a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 1-4.5-4.5a-15.5-15.5 0 0 0-15.5-15.5h14a 4.5 4.5 0 0 1 4.5 4.5a 4.5 4.5 0 0 0 4.5 4.5zM-40 0a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 0 4.5 4.5a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 0 4.5 4.5a 15.5 15.5 0 0 1 15.5 15.5a 4.5 4.5 0 0 1 4.5 4.5v11a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 0-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5h14a 4.5 4.5 0 0 0 4.5 4.5zM40 0a 15.5 15.5 0 0 1 15.5 15.5h-11a-4.5-4.5 0 0 1-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5a-4.5-4.5 0 0 1-4.5-4.5a-15.5-15.5 0 0 1-15.5-15.5z' fill='rgba(245, 101, 101,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background-attachment: fixed;
+	background-size: cover;
 		}
 	10%{
 	background-color:#8600b3;
+	background-attachment: fixed;
+	background-size: cover;
 	}
 	20%{
 		background-color: #e831eb;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	30%{
 		background-color: #eb317f;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	40%{
 		background-color: #e64056;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	50%
 	{
 		background-color: #e66440;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	60%{
 		background-color: #ed9f4c;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	70%{
 		background-color: #f5ed87;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	80%{
 		background-color: #f1f5bc;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	90%
 	{
 		background-color: #c1f7f5;
+		background-attachment: fixed;
+	background-size: cover;
 	}
 	/*50%{
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 0a 20 20 0 0 1 20 20a 0 0 0 0 0 0 0v20a-20-20 0 0 1-20-20a 0 0 0 0 0 0 0z' fill='rgba(104, 211, 145,1)'/%3E%3Cpath d='M20 0a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20zM20 40a 0 0 0 0 0 0 0a 20-20 0 0 1 20-20v20a 0 0 0 0 0 0 0a-20 20 0 0 1-20 20z' fill='rgba(129, 230, 217,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
