--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ center {
 	background-size: cover;
 		}
 	10%{
-	background-color:#8600b3;
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(251, 211, 141,1)'/%3E%3Ccircle cx='28.66' cy='25' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='20' cy='30' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='11.34' cy='25' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='11.34' cy='15' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='20' cy='10' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='28.66' cy='15' r='3.5' stroke-width='0' fill='rgba(237, 137, 54,1)'/%3E%3Ccircle cx='30' cy='20' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='25' cy='28.66' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='15' cy='28.66' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='10' cy='20' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='15' cy='11.34' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='25' cy='11.34' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3Ccircle cx='30' cy='20' r='3.5' stroke-width='0' fill='rgba(221, 107, 32,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 	background-attachment: fixed;
 	background-size: cover;
 	}
