--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ center {
 	background-size: cover;
 	}
 	20%{
-		background-color: #e831eb;
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(250, 240, 137,1)'/%3E%3Cpath d='M10 0L20 10L30 0L30 10L40 10L30 20L40 30L30 30L30 40L20 30L10 40L10 30L0 30L10 20L0 10L10 10z' fill='rgba(214, 158, 46,1)'/%3E%3Cpath d='M5 10L20 13.5L10 20zM30 5L26.5 20L20 10zM35 30L20 26.5L30 20zM10 35L20 30L13.5 20z' fill='rgba(254, 252, 191,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
